// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly the Add field 1`] = `
<InjectIntl(Field)
  action={
    Object {
      "content": "Add Reserved Peer",
      "icon": "plus",
    }
  }
  onSubmit={[Function]}
  placeholder="Enode address to add"
  size="small"
  width={5}
/>
`;

exports[`should render correctly the Remove field 1`] = `
<InjectIntl(Field)
  action={
    Object {
      "content": "Remove Reserved Peer",
      "icon": "minus",
    }
  }
  onSubmit={[Function]}
  placeholder="Enode address to remove"
  size="small"
  width={5}
/>
`;
